--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,10 +14,10 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         php: [8.2]
-        laravel: [10.*]
+        laravel: ['^10.30']
         stability: [prefer-lowest, prefer-stable]
         include:
-          - laravel: 10.*
+          - laravel: ^10.30
             testbench: 8.*
             carbon: ^2.63
 
